# shuttle-qr

./: Cargo.toml
src/: decode.html  encode.html  index.html  main.rs  page.rs  util.rs
