[package]
name = "shuttle-qr"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
rbase64 = "2.0.3"
serde = { version = "1.0.219", features = ["derive"] }
shuttle-axum = "0.53.0"
shuttle-runtime = "0.53.0"
soft-aes = "0.2.2"
tokio = "1.28.2"
tower = { version = "0.5.2", features = ["limit", "buffer"] }

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1
panic = "unwind"

[profile.release.build-override]
strip = true
opt-level = 3
codegen-units = 1
